--- a/ShineData/ShineData.csproj
+++ b/ShineData/ShineData.csproj
@@ -6,6 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <OutputPath>..\Release\</OutputPath>
+    </PropertyGroup>
+
     <ItemGroup>
       <Folder Include="Shine\Attribute\" />
     </ItemGroup>
