--- a/ShineSuite/ShineSuite.csproj
+++ b/ShineSuite/ShineSuite.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
         <LangVersion>latest</LangVersion>
+        <ApplicationIcon>Fiesta.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
